--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,3 +44,10 @@ div{
     background-color: #2cff05;
     transition: background-color ease-in-out 0.5s;
 }
+
+.hidden {
+    width: 0;
+    height: 0;
+    visibility: hidden; /* Cache visuellement l'élément */
+    position: absolute; /* Le retire du flux visuel, si nécessaire */
+}
